<resources>
    <string name="app_name">Social Dstance</string>
    <string name="social_dstance">Social Dstance</string>
    <string name="disabled">DISABLED</string>
    <string name="enabled">ENABLED</string>
    <string name="puuid"></string>
    <string name="sign_in_success">Signed in successful</string>
    <string name="sign_in_failed">Signed in failed</string>
    <string name="email_error">Must be valid e-mail</string>
    <string name="password_error">Password must be at least 6 characters long</string>
    <string name="password_verification_error">Passwords do not match.</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_verification">Passwords must match</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="account_creation_successful">Account created successfully</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="sign_out">Sign out</string>
    <string name="open_source">Open Source</string>
    <string name="custom_license_title">Open Source Libraries</string>
    <string name="about">About</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="rafael_blurryrobot_net">rafael@blurryrobot.net</string>
    <string name="contact_us">Contact Us</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>

    <string name="about_msg">Social Dstance is a tool that helps you keep track of your social distancing efforts.</string>
    <string name="why_msg">We believe that by helping you keep track of your efforts we will encourage you to stay home and therefore lower the curve of infections.</string>
    <string name="legal">Legal</string>
    <string name="production_banner_ad"></string>
    <string name="test_banner_ad"></string>
    <string name="stay_safe">Stay Safe!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="daily_contacts">Daily Contacts</string>
    <string name="weekly_contacts">Weekly Contacts</string>
    <string name="monthly_contacts">Monthly Contacts</string>
    <string name="password_reset">Password Reset</string>
    <string name="e_mail">E-mail</string>
    <string name="send_email">Send Email</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact">Contact</string>
    <string name="contact_recorded_at">Contact recorded within: </string>
    <string name="limited_functionality">Limited Functionality</string>
    <string name="bluetooth_limited">This application requires Bluetooth Admin and Bluetooth Permission to work properly.</string>
    <string name="location_limited">This application requires Fine Location and Background Location Permission to work properly.</string>
    <string name="bluetooth_permission_request">Bluetooth Permission Request"</string>
    <string name="bluetooth_permission_request_desc">This application requires bluetooth permissions to scan for nearby beacons</string>
    <string name="location_permission_request">Location Permission Request"</string>
    <string name="location_permission_request_desc">This application requires location permissions to scan for nearby beacons</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable_bluetooth_reason">This application requires bluetooth to be enabled. Please enable bluetooth"</string>
    <string name="failed_to_start">Failed to start service.</string>
    <string name="bluetooth_unsupported">Bluetooth is not supported on this device.</string>
    <string name="bluetooth_must_be_enabled">Bluetooth must be enabled to start the service.</string>
    <string name="scanning_and_advertising">Scanning and Advertising…</string>
    <string name="password_reset_success">Sent password reset successfully</string>
    <string name="password_reset_failed">Failed to send password reset e-mail</string>
</resources>
